<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phoenix.firstmap.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteMarker"
            android:text="@string/delete_marker"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openPOISearch"
            android:text="@string/poi_search"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="busSearch"
            android:text="@string/bus_search"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="routePlanSearch"
            android:text="@string/route_search"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="geoCode"
            android:text="@string/geo_code"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="location"
            android:text="@string/location"
            />
    </LinearLayout>
    <!--
    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />
    -->
    <com.baidu.mapapi.map.TextureMapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />
</LinearLayout>
